--- a/package.json
+++ b/package.json
@@ -12,7 +12,23 @@
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.32",
+        "prettier": "^3.3.3",
+        "prettier-plugin-blade": "^2.1.19",
+        "prettier-plugin-tailwindcss": "^0.6.6",
         "tailwindcss": "^3.4.0",
         "vite": "^5.0"
-    }
+    } ,
+    "prettier" : {
+        "plugins": ["prettier-plugin-blade", "prettier-plugin-tailwindcss"],
+        "overrides": [
+          {
+            "files": [
+              "*.blade.php"
+            ],
+            "options": {
+              "parser": "blade"
+            }
+          }
+        ]
+      }
 }
